--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "./dist/cjs/index.js",
   "scripts": {
     "start": "node dist/cjs/index.js",
+    "devTest": "nodemon src/test.ts",
     "dev": "nodemon src/index.ts",
     "debug": "nodemon --exec node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts",
     "test": "jest --config jestconfig.json",
@@ -39,7 +40,10 @@
   },
   "homepage": "https://github.com/biswasray/zodpress#readme",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jest": "^29.5.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "commitizen": "^4.3.0",
@@ -53,5 +57,12 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.0.0",
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.22.4"
   }
 }
